fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@
 
 body {
     margin: 0;
-    background-color: #ECE8E1;
+    background-color: #2C47BE;
 
     font-family: "EB Garamond", serif;
+    color: white;
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-template-rows: 60px 1fr;
@@ -50,14 +51,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    row-gap: 20px;
-    column-gap: 20px;
+    row-gap: 25px;
 }
 
 .name-title {
     font-family: TAN;
     color: #EF7B57;
-    font-size: 64px;
+    font-size: 60px;
     grid-area: name-titles;
     padding-right: 10px;
 }
@@ -108,7 +108,7 @@ ion-icon {
 }
 
 .name-content-space {
-    height: 20px;
+    height: 15px;
 }
 
 .instagram-hyper {
@@ -120,10 +120,10 @@ ion-icon {
     flex-direction: row;
 }
 
-a:link {color: black;}      /* unvisited link */
-a:visited {color: black;}   /* visited link */
-a:hover {color: black;}     /* mouse over link */
-a:active {color: black;}
+a:link {color: white;}      /* unvisited link */
+a:visited {color: white;}   /* visited link */
+a:hover {color: white;}     /* mouse over link */
+a:active {color: white;}
 a {text-decoration: none;}
 .media-handle {
     padding-left: 10px;
@@ -178,7 +178,6 @@ a {text-decoration: none;}
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color:#ECE8E1;
         grid-area: top-head;
     }
 
